# incremental-compiler

./: Cargo.toml  project.py  readme.md
compiler/: Cargo.toml
compiler/src/: main.rs  repl.rs  types.rs  utility.rs
compiler/src/backend/: x64_backend.rs  x64_backend_tests.rs  x64_build.rs  x64_build_tests.rs  x64_def.rs  x64_print.rs  x64_print_tests.rs
compiler/src/frontend/: ast.rs  mod.rs
compiler/src/frontend/decomplify/: decomplify_tests.rs  mod.rs
compiler/src/frontend/lexer/: lexer_tests.rs  mod.rs
compiler/src/frontend/parser/: mod.rs  parser_tests.rs
compiler/src/frontend/partial_eval/: mod.rs  partial_eval_tests.rs
compiler/src/frontend/uniquify/: mod.rs  uniquify_tests.rs
compiler/src/interpreter/: interp_ast.rs  interp_ir.rs  mod.rs
compiler/src/ir/: explicate.rs  explicate_tests.rs
datatypes/: Cargo.toml
datatypes/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  runtime.rs  static_lib_check.rs  types.rs
src/: ast.rs  decomplify.rs  explicate.rs  intermediate.rs  interp.rs  io.rs  lexer.rs  main.rs  parser.rs  repl.rs  token.rs  uniquify.rs  utility.rs
src/backend/: interp.rs  mod.rs  select_instruction.rs  x64_backend.rs  x64_backend_tests.rs  x64_build.rs  x64_def.rs  x64_print.rs  x64_print_tests.rs
src/frontend/: ast.rs  decomplify.rs  lexer.rs  parser.rs  uniquify.rs
src/frontend/decomplify/: decomplify_tests.rs
src/frontend/parser/: mod.rs  parser_tests.rs
src/frontend/uniquify/: uniquify_tests.rs
src/interpreter/: interp_ast.rs  interp_ir.rs
src/ir/: explicate.rs  explicate_tests.rs  mod.rs
(+4 files in other folders)
