[package]
name = "runtime"
version = "0.1.0"
authors = ["Thomas <tbre90@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
lto = true
opt-level = 0
panic = "abort"

[profile.release]
lto = true
opt-level = 0
panic = "abort"

[lib]
name = "runtime"
path = "src/runtime.rs"
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datatypes = { path = "../datatypes" }
libc = "*"
static_vcruntime = "*"